--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<h3>Diversity, Equity, and Inclusion (DEI) Council (Carondelet High School 2021-2023)</h3>
 								<p>Commit to create an environment that is physically, personally, spiritually, psychologically, and academically safe for all students and staff is long-term and requires collaboration.</p>
 								<img src="images/club-dei-chs-dragon-table-crondelete.JPG" style="float: left; width: 65%; margin-right: 1%; margin-bottom: 0.5em;">
-								<p style="clear: both;"></p>-->
+								<p style="clear: both;"></p>
 								<h2 class="major">Awards</h2>
 								<p>2023 Carondelete Teen Hackathon Winner</p>
 								<img src="images/club-award-chs-hackerthon-1.png">
