--- a/index.html
+++ b/index.html
@@ -51,30 +51,36 @@
 								<h2 class="major">clubs</h2>
 								<h3>Innovation Council - Management Student Association (UBC)</h3>
 								<p>We plan and host events and activities for management students to ultimately motivate more students’ engagement and expand MSA’s influential sphere.</p>
-								<img src="images/club-msa-ubc-inner-group.JPG" style="float: left; width: 39%; margin-right: 1%; margin-bottom: 0.5em;">
-								<img src="images/club-msa-ubc-stickers.JPG" style="float: left; width: 46%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/club-msa-ubc-inner-group.JPG" style="float: left; width: 80%; margin-right: 1%; margin-bottom: 0.5em;">
+								<p style="clear: both;"></p>
+								<img src="images/club-msa-ubc-stickers.JPG" style="float: left; width: 80%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
 								<h3>Diversity, Equity, and Inclusion (DEI) Council (Carondelet High School 2021-2023)</h3>
 								<p>Commit to create an environment that is physically, personally, spiritually, psychologically, and academically safe for all students and staff is long-term and requires collaboration.</p>
 								<img src="images/club-dei-chs-dragon-table-crondelete.JPG" style="float: left; width: 65%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
 								<h2 class="major">Awards</h2>
-								<p>2023 Carondelete Teen Hackathon Winner</p>
+								<h3>2023 Carondelet Teen Hackathon Winnmer</h3>
+								<p>The hackathon’s theme was entrepreneurship and forging connections by developing a business product.</p>
 								<img src="images/club-award-chs-hackerthon-1.png">
+								<h2 class="major">Awards</h2>
+								<h3>Katherine Johnson Collaboration Award</h3>
+								<p>I was singled out for collaboration skills based on my contribution in all aspects and awarded Katherine Johnson Collaboration Award</p>
 								<p style="clear: both;"></p>
-								<p>Visual & Performing Arts and Computer Science Department Award</p>
+								<h3>Visual & Performing Arts and Computer Science Department Award</h3>
 								<img src="images/club-award-chs-art-award.JPG" style="float: left; width: 45%; margin-right: 1%; margin-bottom: 0.5em;">
 								<img src="images/club-award-chs-art-award-2.JPG" style="float: left; width: 45%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
-								<p>Modern Language Department Award</p>
-								<img src="images/club-award-chs-lang-award.png">
+								<h3>Modern Language Department Award</h3>
+								<img src="images/club-award-chs-lang-award.JPG"  style="float: left; width: 45%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
 							</article>
 						<!-- artswim -->
 							<article id="artswim">
 								<h2 class="major">artswim</h2>
 								<h3>Artistic Swimming - Walnut Creek Aquanuts</h3>
-								<p>I joined the <a href="https://www.gomotionapp.com/team/reczzwca/page/home">Walnut Creek Aquanuts</a> at age 12. As a teammate, I was versatile in my positions, learning & knowing everyone’s spot. As a competitor, we earned various medals, some notable ones being: 2021 Nationals - 2nd place in team & combo, 2019 Junior Olympics - 7th place in team & 3rd in combo.</p>
+								<p><a href="https://www.gomotionapp.com/team/reczzwca/page/home">Walnut Creek Aquanuts (WCA)</a> develops athletes from novice to elite, instilling positive life skills. I spent 3/5 years as an alternate for my teams, so I learned to do everyone’s role, adapting quickly to change and new challenges. Highly coachable by learning from mistakes, swam with determination and persistence under intensely competitive conditions</pp>
+								<p>Joined the <a href="https://www.gomotionapp.com/team/reczzwca/page/home">Walnut Creek Aquanuts</a> at age 12. As a teammate, I was versatile in my positions, learning & knowing everyone’s spot. As a competitor, we earned various medals, some notable ones being: 2021 Nationals - 2nd place in team & combo, 2019 Junior Olympics - 7th place in team & 3rd in combo.</p>
 								<img src="images/sychro-wca-jrb-2nd.JPG" style="float: left; width: 60%; margin-right: 1%; margin-bottom: 0.5em;">
 								<img src="images/sychro-wca-jrb-3rd.JPG" style="float: left; width: 34%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
@@ -87,7 +93,7 @@
 								<h3>My Team Performances</h3>
 								<a href="https://youtu.be/e5Luiqbef4I?feature=shared"> 2021 National Championship Team Routine ☆</a><br>
 								<a href="https://youtu.be/duYBmwVYQW8?feature=shared"> 2021 National Championship Team Tech Routine ☆</a><br>
-								<a href="https://youtu.be/7486w-_SHxI?feature=shared"> 2021 Walnut Creek Aquanuts Fall Show ☆</a><br>
+								<a href="https://youtu.be/Nnxi_kwZzW0?feature=shared"> 2021 National Championship Team Combo ☆</a><br>
 								<p style="clear: both;"></p>
 								<br>
 							</article>
@@ -97,16 +103,19 @@
 							<h2 class="major">community</h2>
 							<h3>Volunteering - American Cancer Society Discovery Shop (2020-2023)</h3>
 							<p>Help the American Cancer Society fund advocacy, research, and patient support programs to improve the lives of people with cancer and their families.</p>
+							<img src="images/community-discovery.png" style="float: left; width: 60%; margin-right: 1%; margin-bottom: 0.5em;">
+							<p style="clear: both;"></p>
+							<h4>Presidential Award & Jefferson Award</h4>
 							<img src="images/community-president-award-certs.JPG" style="float: left; width: 60%; margin-right: 1%; margin-bottom: 0.5em;">
-							<img src="images/community-president-award-certs-letter.JPG" style="float: left; width: 34%; margin-right: 1%; margin-bottom: 0.5em;">
+							<img src="images/community-president-award-certs-letter.JPG" style="float: left; width: 36%; margin-right: 1%; margin-bottom: 0.5em;">
 							<p style="clear: both;"></p>
 							<img src="images/community-jefferson-award.JPG" style="float: left; width: 50%; margin-right: 1%; margin-bottom: 0.5em;">
 							<img src="images/community-president-award.png" style="float: left; width: 37%; margin-right: 1%; margin-bottom: 0.5em;">
 							<p style="clear: both;"></p>
 							<h3>Swimming Instructor - Splash Swim School (2021 - 2023)</h3>
 							<p>CPR/First Aid certified. developed different tactics to improve the swimmers’ skills, while ensuring swimmers have a fun, positive experience.</p>
-							<img src="images/community-swiming-coach.jpg" style="float: left; width: 50%; margin-right: 1%; margin-bottom: 0.5em;">
-							<img src="images/community-work-1.JPG" style="float: left; width: 45%; margin-right: 1%; margin-bottom: 0.5em;">
+							<img src="images/community-swiming-coach.jpg" style="float: left; width: 55%; margin-right: 1%; margin-bottom: 0.5em;">
+							<img src="images/community-work-1.JPG" style="float: left; width: 37%; margin-right: 1%; margin-bottom: 0.5em;">
 							<p style="clear: both;"></p>
 						</article>
 
@@ -121,16 +130,18 @@
 								<img src="images/hobbie-dress-2-1.JPG" style="float: left; width: 35%; margin-right: 1%; margin-bottom: 0.5em;">
 								<img src="images/hobbie-making-dress-1-2.JPG" style="float: left; width: 20.5%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
-								<img src="images/hobbie-dress-3-1.JPG" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-								<img src="images/hobbie-making-dress-3-2.JPG" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-								<img src="images/hobbie-making-dress-3-3.JPG" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/hobbie-dress-3-1.JPG" style="float: left; width: 33%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/hobbie-dress-6.JPG" style="float: left; width: 25%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/hobbie-making-dress-3-3.JPG" style="float: left; width: 33%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
 								<img src="images/hobbie-dress-4-1.JPG" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
 								<img src="images/hobbie-making-dress-4-2.JPG" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/hobbie-making-dress-3-2.JPG" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
 								<h3>Jewery & Embroidery</h3>
-								<img src="images/hobbie-ear-ring.JPG" style="float: left; width: 15%; margin-right: 1%; margin-bottom: 0.5em;">
-								<img src="images/hobbie-em.JPG" style="float: left; width: 35%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/hobbie-ear-ring.JPG" style="float: left; width: 20%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/hobbie-necklace.JPG" style="float: left; width: 19%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/hobbie-em.JPG" style="float: left; width: 48%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
 								<h3>Crafts</h3>
 								<img src="images/hobbie-craft-1-3.JPG" style="float: left; width: 31%; margin-right: 1%; margin-bottom: 0.5em;">
@@ -142,7 +153,11 @@
 								<img src="images/hobbie-snow-boarding.JPG" style="float: left; width: 16%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
 								<h2 class="major">Music & Dance</h2>
-								<img src="images/hobbie-music-gu-zheng.JPG" style="float: left; width: 40%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/hobbie-music-gu-zheng.JPG" style="float: left; width: 55%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/hobbie-music-band-1.JPG" style="float: left; width: 28%; margin-right: 1%; margin-bottom: 0.5em;">
+								<p style="clear: both;"></p>
+								<img src="images/hobbie-dance-3.JPG" style="float: left; width: 45%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/hobbie-dance-2.JPG" style="float: left; width: 45%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
 							</article>
 						<!-- Elements -->
