--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
 								<p>Commit to create an environment that is physically, personally, spiritually, psychologically, and academically safe for all students and staff is long-term and requires collaboration.</p>
 								<img src="images/club-dei-chs-dragon-table-crondelete.JPG" style="float: left; width: 65%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
+								<h2 class="major">Awards</h2>
 								<h3>2023 Carondelet Teen Hackathon Winnmer</h3>
 								<p>The hackathon’s theme was entrepreneurship and forging connections by developing a business product.</p>
 								<img src="images/club-award-chs-hackerthon-1.png">
-								<h2 class="major">Awards</h2>
+								<p style="clear: both;"></p>
 								<h3>Katherine Johnson Collaboration Award</h3>
 								<p>I was singled out for collaboration skills based on my contribution in all aspects and awarded Katherine Johnson Collaboration Award</p>
 								<p style="clear: both;"></p>
@@ -78,12 +79,14 @@
 							<article id="artswim">
 								<h2 class="major">artswim</h2>
 								<h3>Artistic Swimming - Walnut Creek Aquanuts</h3>
-								<p>Joined the <a href="https://www.gomotionapp.com/team/reczzwca/page/home">Walnut Creek Aquanuts</a> at age 12. As a teammate, I was versatile in my positions, learning & knowing everyone’s spot. As a competitor, we earned various medals, some notable ones being: 2021 Nationals - 2nd place in team & combo, 2019 Junior Olympics - 7th place in team & 3rd in combo.</p>
-								<img src="images/sychro-wca-jrb-2nd.JPG" style="float: left; width: 60%; margin-right: 1%; margin-bottom: 0.5em;">
-								<img src="images/sychro-wca-jrb-3rd.JPG" style="float: left; width: 34%; margin-right: 1%; margin-bottom: 0.5em;">
+								<p>Joined the <a href="https://www.gomotionapp.com/team/reczzwca/page/home">Walnut Creek Aquanuts</a> at age 12. As a teammate, I was versatile in my positions, learning & knowing everyone’s spot. As a competitor, we earned various medals, some notable ones being: 2021 Nationals - 2nd place in technical & combo routine, 3rd in team free routine. 2019 Junior Olympics - 3rd in team combo & 7th place in team routine.</p>
+								<img src="images/sychro-wca-jrb-2nd.JPG" style="float: left; width: 37.7%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/sychro-wca-jrb-team.JPG" style="float: left; width:37.7%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/sychro-wca-jrb-3rd.JPG" style="float: left; width: 21%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
-								<img src="images/sychro-wca-jrb-group-2.JPG" style="float: left; width: 46%; margin-right: 1%; margin-bottom: 0.5em;">
-								<img src="images/sychro-wca-jrb-group-3.JPG" style="float: left; width: 46%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/sychro-wca-jrb-group-2.JPG" style="float: left; width: 38%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/sychro-lift.JPG" style="float: left; width: 21%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/sychro-wca-jrb-group-3.JPG" style="float: left; width: 38%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
 								<img src="images/sychro-wca-jrb-group.JPG" style="float: left; width: 40%; margin-right: 1%; margin-bottom: 0.5em;">
 								<img src="images/synchro-jrb-pic.JPG" style="float: left; width: 46%; margin-right: 1%; margin-bottom: 0.5em;">
