--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
 								<img src="images/hobbie-necklace.JPG" style="float: left; width: 19%; margin-right: 1%; margin-bottom: 0.5em;">
 								<img src="images/hobbie-em.JPG" style="float: left; width: 48%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
+								<img src="images/hobbie-necklace-3.jpg" style="float: left; width: 34%; margin-right: 1%; margin-bottom: 0.5em;">
+								<img src="images/hobbie-nacklace-2.jpeg" style="float: left; width: 36%; margin-right: 1%; margin-bottom: 0.5em;">
+								<p style="clear: both;"></p>
 								<h3>Crafts</h3>
 								<img src="images/hobbie-craft-1-3.JPG" style="float: left; width: 31%; margin-right: 1%; margin-bottom: 0.5em;">
 								<img src="images/hobbie-craft-1-1.JPG" style="float: left; width: 31%; margin-right: 1%; margin-bottom: 0.5em;">
