--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 						<!-- clubs -->
 							<article id="clubs">
-								<h2 class="major">clubs</h2>
+								<h2 class="major">clubs and awards</h2>
 								<h3>Innovation Council - Management Student Association (UBC)</h3>
 								<p>We plan and host events and activities for management students to ultimately motivate more students’ engagement and expand MSA’s influential sphere.</p>
 								<img src="images/club-msa-ubc-inner-group.JPG" style="float: left; width: 80%; margin-right: 1%; margin-bottom: 0.5em;">
