Update club page
Update club page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#clubs">Clubs</a></li>
+								<li><a href="#clubs">Clubs & awards</a></li>
 								<li><a href="#artswim">artswim</a></li>
 								<li><a href="#community">community</a></li>
 								<li><a href="#Hobbies">Hobbies</a></li>
