add bullet journal

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
 								<img src="images/sychro-wca-jrb-group.JPG" style="float: left; width: 40%; margin-right: 1%; margin-bottom: 0.5em;">
 								<img src="images/synchro-jrb-pic.JPG" style="float: left; width: 46%; margin-right: 1%; margin-bottom: 0.5em;">
 								<p style="clear: both;"></p>
+								<a href="https://drive.google.com/file/d/192GuhKGPtI0AkojLCfvGBBHHTNAEDZpS/view?usp=drive_link"> <img src="images/sychro-wca-awards.jpg" style="float: left; width: 90%; margin-right: 1%; margin-bottom: 0.5em;"></a>
+								<p style="clear: both;"></p>
 								<h3>My Team Performances</h3>
 								<a href="https://youtu.be/e5Luiqbef4I?feature=shared"> 2021 National Championship Team Routine ☆</a><br>
 								<a href="https://youtu.be/duYBmwVYQW8?feature=shared"> 2021 National Championship Team Tech Routine ☆</a><br>
@@ -162,6 +164,14 @@
 								<p style="clear: both;"></p>
 								<img src="images/hobbie-dance-3.JPG" style="float: left; width: 45%; margin-right: 1%; margin-bottom: 0.5em;">
 								<img src="images/hobbie-dance-2.JPG" style="float: left; width: 45%; margin-right: 1%; margin-bottom: 0.5em;">
+								<p style="clear: both;"></p>
+								<h2 class="major">Bullet Journal</h2>
+								<a href="https://drive.google.com/file/d/1DUHnAwNzXtETS89QBp9J6fGaYsYnts3_/view?usp=sharing"> <img src="images/bulletJournal-1.jpg" style="float: left; width: 31%; margin-right: 1%; margin-bottom: 0.5em;"></a>
+								<a href="https://drive.google.com/file/d/1-ksjFWOad67j8uESqmX4J40WfrLRsJqS/view?usp=drive_link"> <img src="images/bulletJournal-2.jpg" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></a>
+								<a href="https://drive.google.com/file/d/1S32nj0sXtK5nCpbK49EEMZMExEpy0N46/view?usp=drive_link"> <img src="images/bulletJournal-3.jpeg" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></a>
+								<p style="clear: both;"></p>
+								<a href="https://drive.google.com/file/d/1DBvwsltPZ51BxlcKbwKBT0_f2sd8zuxr/view?usp=drive_link"> <img src="images/bulletJournal-4.jpeg" style="float: left; width: 20%; margin-right: 1%; margin-bottom: 0.5em;"></a>
+								<a href="https://drive.google.com/file/d/1SXZPTQ-GvG8-hPRGjQXK7y9BK8CD6mmu/view?usp=drive_link"> <img src="images/bulletJournal-5.png" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"></a>
 								<p style="clear: both;"></p>
 							</article>
 						<!-- Elements -->
